# ros2neuro_acquisition

./: CMakeLists.txt  package.xml
include/ros2neuro_acquisition/: Acquisition.hpp  Device.hpp
src/: Acquisition.cpp  Device.cpp  acquisition.cpp  test_plugin.cpp
